# flutter-app-template

./: .gitignore  LICENSE  README.md  pubspec.yaml
lib/: main.dart
rust/: .gitignore  Cargo.toml
rust/src/: main.rs
scripts/: build.py  init.py
scripts/lib/: __init__.py  app.desktop  build_mac.py  build_snap.py  snapcraft.yaml
