[package]
name = "flutter-app"
description = "Amazing desktop flutter app"
version = "0.1.2"
authors = ["juju <gliheng@foxmail.com>"]
publish = false
edition = "2018"

[package.metadata.flutter]
version = "7375a0f414bde4bc941e623482221db2fc8c4ab5"
identifier = "one.juju.flutter-app" # This is only used on mac

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
flutter-engine = "0.1.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.3"

[build-dependencies]
flutter-download = "0.1.0"
cargo_toml = "0.4.0"
serde = "1.0.81"
serde_derive = "1.0.81"