[package]
name = "$name"
description = "Amazing desktop flutter app"
version = "0.3.0"
authors = ["juju <gliheng@foxmail.com>", "Sophie Tauchert <sophie@999eagle.moe>"]
publish = false
edition = "2018"

[package.metadata.flutter]
identifier = "com.example.$name" # This is only used on mac

[dependencies]
log = "0.4.6"
flutter-engine = "0.3.0"
fern = { version = "^0.5", features = ["colored"] }
chrono = "^0.4"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.6.3"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.9"
